# fast-to-do-list

./: .env.example  Pipfile  README.md  pyproject.toml  setup.cfg
src/: auto_applying_migrations.py  database.py  db_models.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2022_07_08_1333-348729fa04e6_added_initial_tables.py  2022_07_14_1737-f7b6a0868fd4_init_tables.py  2022_07_15_1159-fadc8987ee72_add_column_priority.py  2022_07_15_1201-837420a978f2_fix_column_priority.py
src/api/: auth.py  auth_utils.py  crud.py  database.py  db_models.py  dependencies.py  exceptions.py  models.py  schemas.py  settings.py  tasks.py  users.py
src/api/access_token/: queries.py  views.py
src/api/tasks/: enums.py  models.py  queries.py  views.py
src/api/users/: models.py  queries.py  views.py
