[tool.poetry]
name = "fast-to-do-list"
version = "0.1.0"
description = ""
authors = ["Roman Hnatenko <romanhnatenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
passlib = {extras = ["bcrypt"], version = "*"}
python-jose = {extras = ["cryptography"], version = "*"}
uvicorn = "*"
python-multipart = "*"
fastapi = "*"
pydantic = {extras = ["email"], version = "*"}
asyncpg = "*"
alembic = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
aioredis = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
